--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,3 @@
-/* App.css */
-
-/* Globalni stilovi */
 body {
   font-family: 'Roboto', sans-serif;
   margin: 0;
@@ -9,12 +6,10 @@ body {
   background-color: #f5f5f5;
 }
 
-/* Stil za AppBar (gornja traka) */
 .MuiAppBar-root {
-  background-color: #1976d2; /* Plava boja */
+  background-color: #1976d2;
 }
 
-/* Stil za Drawer (bočni meni) */
 .MuiDrawer-root {
   width: 240px;
   flex-shrink: 0;
@@ -26,28 +21,24 @@ body {
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
 }
 
-/* Stil za ListItemButton u Drawer */
 .MuiListItemButton-root {
   text-transform: uppercase;
   font-weight: bold;
 }
 
-/* Stil za linkove unutar menija */
 .MuiListItemText-root a {
   text-decoration: none;
   color: inherit;
 }
 
-/* Stil za glavnu sekciju */
 main {
   padding: 20px;
   flex-grow: 1;
   background-color: #ffffff;
-  margin-left: 240px; /* Udaljenost od bočnog menija */
+  margin-left: 240px; 
   transition: margin-left 0.3s;
 }
 
-/* Stil za kontener kada je meni zatvoren */
 .MuiDrawer-docked {
   display: none;
 }
@@ -58,7 +49,6 @@ main {
   min-height: 100vh;
 }
 
-/* Stil za linkove u Headeru */
 h1 {
   flex-grow: 1;
   font-size: 24px;
@@ -67,13 +57,11 @@ h1 {
   text-align: center;
 }
 
-/* Dodajte padding i marginu na stranice */
 .page-content {
-  margin-top: 64px; /* Da bi se sadržaj video ispod AppBar-a */
+  margin-top: 64px; 
   padding: 20px;
 }
 
-/* Stil za linkove unutar stranica */
 a {
   color: #1976d2;
   text-decoration: none;
@@ -83,9 +71,6 @@ a:hover {
   text-decoration: underline;
 }
 
-/* Stil za login stranu - dodato u app.css */
-
-/* Celokupni kontejner za login stranu */
 .login-container {
   display: flex;
   justify-content: center;
@@ -94,7 +79,6 @@ a:hover {
   background-color: #f0f0f0;
 }
 
-/* Stil za formu na login stranici */
 .login-form {
   background-color: white;
   padding: 30px;
@@ -104,25 +88,21 @@ a:hover {
   max-width: 400px;
 }
 
-/* Naslov unutar forme */
 .login-form h4 {
   margin-bottom: 20px;
   text-align: center;
   font-size: 24px;
 }
 
-/* Razmak između input polja */
 .login-form .MuiTextField-root {
   margin-bottom: 20px;
 }
 
-/* Stil za dugme za prijavu */
 .login-form .MuiButton-root {
   width: 100%;
   margin-top: 10px;
 }
 
-/* Poruka o grešci */
 .login-form .error-message {
   color: red;
   text-align: center;
